Correction du overflow sur la modal de la lightBox

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -198,6 +198,7 @@ form input {
     z-index: 1;
     left: 0;
     background: white;
+    overflow: hidden;
 }
 
 #closeButton{
